--- a/src/LegacyCodeKoans/LegacyCodeKoans.csproj
+++ b/src/LegacyCodeKoans/LegacyCodeKoans.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentAssertions" Version="6.8.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
       <PackageReference Include="NSubstitute" Version="4.2.1" />
       <PackageReference Include="xunit" Version="2.4.1" />
